--- a/smarth/index.html
+++ b/smarth/index.html
@@ -153,6 +153,7 @@
     </div>
     <div class="parent_box">
       <div class="parent_title">关联家长</div>
+    <a href="./test">跳转测试</a>
       <div class="parent_list">
         <div class="item">
           <div>刘吴迪(爸爸)</div>
