--- a/smarth/index.html
+++ b/smarth/index.html
@@ -12,40 +12,170 @@
     <!-- HTML5 shim 和 Respond.js 是为了让 IE8 支持 HTML5 元素和媒体查询（media queries）功能 -->
     <!-- 警告：通过 file:// 协议（就是直接将 html 页面拖拽到浏览器中）访问页面时 Respond.js 不起作用 -->
     <!--[if lt IE 9]>
-      <script src="https://cdn.jsdelivr.net/npm/html5shiv@3.7.3/dist/html5shiv.min.js"></script>
-      <script src="https://cdn.jsdelivr.net/npm/respond.js@1.4.2/dest/respond.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/html5shiv@3.7.3/dist/html5shiv.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/respond.js@1.4.2/dest/respond.min.js"></script>
     <![endif]-->
+    <link href="https://cdn.bootcdn.net/ajax/libs/Swiper/5.4.5/css/swiper.min.css" rel="stylesheet">
+    <link href="https://cdn.bootcdn.net/ajax/libs/animate.css/4.1.0/animate.min.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="./static/style/header.css">
-    <link rel="stylesheet" href="./static/style/footer.css">
+    <!-- 自定义 -->
+    <link rel="stylesheet" href="./static/style/reset.css">
+    <link rel="stylesheet" href="./static/style/common.css">
     <style>
         .wrap{
-            background: #4caf50;
+            background: #fff;
             height: 2000px;
         }
-        h1{
-            font-size: 0.3rem;
+        .banner .banner_item{
+            height: 100vh;
+            background-position: center center;
+            background-size: cover;
+            background-repeat: no-repeat;
+        }
+        /* 轮播按钮重置 */
+        .swiperPro .swiper-pagination-bullets{
+            bottom: 30px;
+        }
+        .swiperPro .swiper-pagination-bullet{
+            background: #999;
+            width: 22px;
+            height: 4px;
+            opacity: 0.7;
+            border-radius: 2px;
+            background: #FFFFFF;
+        }
+        .swiperPro .swiper-pagination-bullet-active{
+            opacity: 1;
+            width: 36px;
+            background: #17bed2;
+        }        
+
+        .plate_title{
+            font-size: 30px;
+            color: #515769;
+            padding: 40px 0 20px;
+            text-align: center;
+        }
+
+        /* 产品介绍 */
+        .products{
         }
     </style>
 </head>
 <body>
     <header></header>
-    <div class="wrap">
-        
-        <!-- <h1>你好，世界！</h1> -->
-    </div>
-    <footer></footer>
 
+    <div class="wrap">
+        <!-- banner -->
+        <div class="banner">
+            <!-- <div class="swiper-container swiper-no-swiping swiperPro"> -->
+            <div class="swiper-container swiperPro">
+                <div class="swiper-wrapper" id="swiperProWrap">
+                    <div class="swiper-slide">
+                        <div class="banner_item" style="background-image: url(./static/img/banner1.jpg);">
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="banner_item" style="background-image: url(./static/img/banner2.jpg);">
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="banner_item" style="background-image: url(./static/img/banner3.jpg);">
+                        </div>
+                    </div>
+                </div>
+                <!-- 如果需要分页器 -->
+                <div class="swiper-pagination"></div>
+        
+                <!-- 如果需要导航按钮 -->
+                <!-- <div class="swiper-button-prev"></div> -->
+                <!-- <div class="swiper-button-next"></div> -->
+            </div>
+        </div>
+
+        <!-- 产品介绍 -->
+        <div class="products container">
+            <h2 class="plate_title">明星产品</h2>
+            <div class="products_con">
+                <div class="row">
+                    <div class="col-sm-4">
+                        <div class="img_box">
+                            <img class="img-responsive img_hover wow fadeInUp" src="http://demo.qfpffmp.cn/cssthemes5/twts_201_aironepage/img/970x647/01.jpg" alt="Latest Products Image"
+                                data-wow-duration=".3" data-wow-delay=".1s" >
+                        </div>
+                        <!-- <h4><a href="#">Workspace</a> <span class="text-uppercase margin-l-20">Management</span></h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut
+                            consequat siad esqudiat dolor</p>
+                        <a class="link" href="#">Read More</a> -->
+                    </div>
+
+                    <div class="col-sm-4">
+                        <div class="img_box">
+                            <img class="img-responsive img_hover wow fadeIn" src="http://demo.qfpffmp.cn/cssthemes5/twts_201_aironepage/img/970x647/02.jpg" alt="Latest Products Image" data-wow-duration=".3" data-wow-delay=".2s">
+                        </div>
+                        <!-- <h4><a href="#">Minimalism</a> <span class="text-uppercase margin-l-20">Developmeny</span></h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut
+                            consequat siad esqudiat dolor</p>
+                        <a class="link" href="#">Read More</a> -->
+                    </div>
+
+                    <div class="col-sm-4">
+                        <div class="img_box">
+                            <img class="img-responsive img_hover wow fadeIn" src="http://demo.qfpffmp.cn/cssthemes5/twts_201_aironepage/img/970x647/03.jpg" alt="Latest Products Image"
+                                data-wow-duration=".3" data-wow-delay=".3s" >
+                        </div>
+                        <!-- <h4><a href="#">Cleant Style</a> <span class="text-uppercase margin-l-20">Design</span></h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed tempor incdidunt ut laboret dolor magna ut
+                            consequat siad esqudiat dolor</p>
+                        <a class="link" href="#">Read More</a> -->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <footer></footer>
 
     <!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
     <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
+    <!-- 加载 swiper -->
+    <script src="https://cdn.bootcdn.net/ajax/libs/Swiper/5.4.5/js/swiper.min.js"></script>
+    <!-- 加载 wow -->
+    <script src="https://cdn.bootcdn.net/ajax/libs/wow/1.1.2/wow.min.js"></script>
     <!-- 加载 自适应rem脚本 -->
     <script src="./static/js/rem.js"></script>
     <script src="./static/js/common.js"></script>
     <script>
+        var swiperPro = new Swiper('.swiperPro', {
+            loop: true,
+            // 如果需要分页器
+            pagination: {
+                el: '.swiper-pagination',
+                clickable: true,
+            },
 
+            // 如果需要前进后退按钮
+            navigation: {
+                nextEl: '.swiper-button-next',
+                prevEl: '.swiper-button-prev',
+            },
+            autoplay: {
+                disableOnInteraction: true, //手动滑动之后不打断播放
+                delay: 3000
+            },
+        })
+
+        // 初始化加载动画
+        var wow = new WOW({
+            boxClass: 'wow',
+            animateClass: 'animated',
+            offset: 0,
+            mobile: true,
+            live: true
+        });
+        wow.init();        
     </script>
 </body>
 </html>
