--- a/smarth/index.html
+++ b/smarth/index.html
@@ -72,16 +72,14 @@
             <div class="swiper-container swiperPro">
                 <div class="swiper-wrapper" id="swiperProWrap">
                     <div class="swiper-slide">
-                        <div class="banner_item" style="background-image: url(./static/img/banner1.jpg);">
-                        </div>
+                        <!-- <div class="banner_item" style="background-image: url(./static/img/banner1.jpg);"></div> -->
+                        <div class="banner_item" style="background-image: url(https://cdn.cnbj2.fds.api.mi-img.com/cdn/website/aqara/images/banner/banner-home003.jpg);"></div>
                     </div>
                     <div class="swiper-slide">
-                        <div class="banner_item" style="background-image: url(./static/img/banner2.jpg);">
-                        </div>
+                        <div class="banner_item" style="background-image: url(https://cdn.cnbj2.fds.api.mi-img.com/cdn/website/aqara/cn/images/banner/home-banner-s6.jpg);"></div>
                     </div>
                     <div class="swiper-slide">
-                        <div class="banner_item" style="background-image: url(./static/img/banner3.jpg);">
-                        </div>
+                        <div class="banner_item" style="background-image: url(https://cdn.cnbj2.fds.api.mi-img.com/cdn/website/aqara/images/banner/home-banner_s2.jpg);"></div>
                     </div>
                 </div>
                 <!-- 如果需要分页器 -->
