--- a/smarth/index.html
+++ b/smarth/index.html
@@ -160,7 +160,7 @@
                 prevEl: '.swiper-button-prev',
             },
             autoplay: {
-                disableOnInteraction: true, //手动滑动之后不打断播放
+                disableOnInteraction: false, //手动滑动之后不打断播放
                 delay: 3000
             },
         })
